fixed cards - stack on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,6 @@ table, th, td {
 a:hover {
     color:gray;
 }
+.officerbio{
+    text-align:center;
+}
